- Updated SB and io.jsonwebtoken to latest version - Implemented scheduling mechanism :-) - Refactoring: use OrderService instead of OrderRepository - Route /api/stats shall be used public for stats - Added some comments for methods - Implemented Custom event: User logged in successfully - Mermaid state diagram for Order status